test/suites/fail-parse/P-005-let-2.expected
  × Failed parsing

Error: P-003

  × Unexpected "Let", expected "comatch", "(", "?", "\\", "_", "Identifier", "NumLit"
   ╭─[P-005-let-2.pol:3:30]
 2 │ 
 3 │ let x : Nat { let x : Nat := let y := Z; y ; S(x) }
   ·                              ───
   ╰────
