test/suites/fail-parse/P-005-let-2.pol
data Nat { Z, S(x: Nat)}

let x : Nat { let x : Nat := let y := Z; y ; S(x) }